--- a/views/login.pug
+++ b/views/login.pug
@@ -7,53 +7,60 @@ html(lang='en')
    link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
    link(href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet")
    link(href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous")
-   link(href="../client/style.css" rel="stylesheet")
+   link(href="../public/css/style.css" rel="stylesheet")
    title chat group login
 
    body
      .container
-        main.d-flex.vh-100.py-2
+        nav.py-3.mb-4
+             a.logo.d-block.text-decoration-none(href="/")
+               img(src="../public/images/logo.png")
+        main.d-flex.py-2.mb-4
            .col-md-8.col-lg-6.m-auto  
-               .card
+               .card.shadow-lg.bg-secondary
                    .card-body.p-4
-                       .logo.d-flex.align-items-center.pb-4
-                         span.material-icons code 
-                         span.text devchallenges
-                       h5.card-title.w-75 Login
-                       form(action='/register', method='post')
-                         div.form-group
-                             label.sr-only(for="inlineFormInputGroup") email
-                             .input-group.mb-3
-                                   .input-group-prepend.border-right-0
-                                     .input-group-text 
-                                       span.material-icons email
-                                   input.form-control.form-control-md-lg.border-left-0#inlineFormInputGroup(type="text" placeholder="Email")
-                             label.sr-only(for="inlineFormInputGroup") password
-                             .input-group.mb-3
-                                   .input-group-prepend.border-right-0
-                                     .input-group-text 
-                                       span.material-icons https
-                                   input.form-control.form-control-md-lg.border-left-0#inlineFormInputGroup(type="text" placeholder="Password")
-                             button.btn.btn-primary.mb-2.w-100(type="submit") login      
-                       p.text-muted.text-center or contine with these social profile
+                       h1.text-center.font-weight-bold.text-light Login
+                       form(action='/auth/login', method='post')
+                          .form-group.mb-4
+                             input.valid-input.form-control.form-control-lg.rounded-0.m-0#login-name(type="text" name="username" autocomplete="off" required) 
+                             label.label-name
+                               .icon
+                                 span.material-icons.pr-2 person
+                                 span.align-top Name
+                             
+                          .form-group.mb-4
+                             input.valid-input.form-control.form-control-lg.rounded-0.mb-0#login-Password(type="password" name="password" required)
+                             label.label-name
+                               .icon
+                                 span.material-icons.pr-2 https
+                                 span.align-top password
+                          
+                          button.btn.my-4.w-100.bg-primary.text-white(type="submit") login
+
+                       each message in messages
+                               if messages.error
+                                 .alert.alert-danger #{message}
+                               else if messages.success  
+                                 .alert.alert-success #{message}  
+
+                       p.text-muted.text-center or contine with
                        ul.text-center.list-inline
-                         li.list-inline-item
+                         li.list-inline-item.social
                            a(href='/auth/google') 
-                             img(src="../client/images/Google.svg")
-                         li.list-inline-item 
-                           a(href='/auth/facebbok')
-                             img(src="../client/images/Facebook.svg")
-                         li.list-inline-item 
-                           a(href='/auth/twitter')
-                             img(src="../client/images/Twitter.svg")
-                         li.list-inline-item 
+                             img(src="../public/images/google.png")
+                        
+                         li.list-inline-item.social 
+                           a(href='/auth/facebook')
+                             img(src="../public/images/facebook.png")
+                        
+                         li.list-inline-item.social
                            a(href='/auth/github')
-                             img(src="../client/images/Gihub.svg")
-                       p.mb-0.text-muted.text-center Don't have an account yet?  
-                         a.text-primary(href='/') Register       
-               footer.py-2.text-black-50.d-flex.justify-content-between.align-items-center  
-                 span #{name}
-                 span devchallengs.io   
+                             img(src="../public/images/github.png")
+                      
+                       p.mb-0.text-center Don't have an account yet?  
+                         a.text-primary.text-decoration-none(href='/auth/register') Register       
+                
         script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous")
-        script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous")         
+        script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous")
+        script(src="../public/client.js")          
