--- a/views/edit.pug
+++ b/views/edit.pug
@@ -4,11 +4,13 @@ html(lang='en')
    meta(charset="UTF-8")
    meta(name="viewport" content="width=device-width, initial-scale=1.0")
    mate(http-equiv="X-UA-Compatible" content="IE=edge")
+   title chat group login
+   link(rel="shortcut icon" href="favicon.ico" type="image/x-icon")
    link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
    link(href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet")
    link(href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous")
    link(href="../public/css/style.css" rel="stylesheet")
-   title chat group login
+   
 
  body
      nav.nav-style.mb-5.px-3.d-flex.justify-content-between.align-items-center.position-fixed.fixed-top
