--- a/views/public_profile.pug
+++ b/views/public_profile.pug
@@ -18,10 +18,10 @@ html(lang='en')
                  img.img-fluid(src="../public/images/logo.png" )
             .ml-auto
                  .drop-down
-                     button.btn.dropdown-toggle(type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false")
+                     button.btn.btnn-lg.dropdown-toggle(type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false")
                          img.dropdown-img.img-fluid.rounded-circle(src=userphoto.img)
                          span.pl-2.text-capitalize #{name}   
-                     .dropdown-menu.bg-secondary.shadow-sm.px-3.mt-2(aria-labelledby="dropdownMenuButton")
+                     .dropdown-menu.dropdown-menu-right.bg-secondary.shadow-sm.px-3.mt-2(aria-labelledby="dropdownMenuButton")
                          a.dropdown-item.p-2.d-flex.align-items-center(href="/users")
                              span.material-icons.pr-2 account_circle
                              span My Profile        
