--- a/views/index.pug
+++ b/views/index.pug
@@ -26,7 +26,7 @@ html(lang='en')
                 .links.my-4
                    a.bg-primary.text-white.text-decoration-none.py-2.px-4.m-2(href='/auth/register') Register
                    a.bg-primary.text-white.text-decoration-none.py-2.px-4.m-2(href='/auth/login') Login 
-     
+          #emoji
                                
    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous")
    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")     
